# osrd

./: .gitignore  README.md  SBB OSS Policy.docx  bakefile.json  docker-compose.yml  flake.nix
.circleci/: config.yml
.circleci/scripts/: add-tags.py  check-commit-titles.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build.yml  interface_change.yml  pr.yml  release.yml
core/: .gitignore  README.md  build.gradle
core/envelope-sim/: build.gradle
core/gradle/: libs.versions.toml
docker/: Dockerfile.playwright-ci  docker-bake-simple.hcl  docker-bake.hcl  docker-compose.host.yml  docker-compose.single-worker.yml  gateway-entrypoint.sh  gateway-front.dockerfile  gateway.dev.simple.toml
editoast/: .gitignore  Cargo.toml  Dockerfile  README.md  map_layers.yml  openapi.yaml  signal_sprites.yml
editoast/editoast_common/: Cargo.toml
editoast/editoast_common/src/: lib.rs  tracing.rs  units.rs
front/: .dockerignore  .eslintrc  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.mts
gateway/: Cargo.toml  Dockerfile  gateway.prod.sample.toml  gateway.toml
nix/: geojson-pydantic.nix  kdtree.nix  python_env.nix  scripts.nix
osrdyne/: Dockerfile
scripts/: build-core.sh  cleanup-db.sh  create-backup.sh  drop-core.sh  host-compose.sh  load-backup.sh  load-railjson-infra.sh  load-railjson-rolling-stock.sh  osrd-compose.sh  pr-tests-compose.sh  run-front-playwright-container.sh  single-worker-compose.sh  sync-openapi.sh
tests/: conftest.py
(+898 files in other folders)
